--- a/src/assets/scss/customstyle/_procurement.scss
+++ b/src/assets/scss/customstyle/_procurement.scss
@@ -902,6 +902,9 @@ input[type="number"]{
         left: 0;
         right: 0;
         z-index: 99;
+        @media only screen and (max-height: 800px) {
+            
+        }
         li{
             cursor: pointer;
             &:hover,&.active{
@@ -997,6 +1000,22 @@ input[type="number"]{
                         font-size: 11px;
                     }
                 }
+            }
+        }
+    }
+    @media only screen and (max-height: 750px) {        
+        &.bottom_drop_field{
+            .common_dropdown_wrap{
+                top: auto;
+                bottom: 100%;
+            }
+        }
+    }
+    @media only screen and (max-width: 767px) {        
+        &.bottom_drop_field{
+            .common_dropdown_wrap{
+                top: auto;
+                bottom: 100%;
             }
         }
     }
@@ -1167,7 +1186,11 @@ input[type="number"]{
         position: relative;
         background: #F9FAFB;
         border: 1px solid $neutral_2;
-        border-radius: 12px;        
+        border-radius: 12px; 
+        overflow-x: auto;  
+        .search_result_card_header,.search_result_accordion_details{
+            min-width: 750px;
+        }     
         .card_img {
             min-width: 120px;
             padding-right: 40px;
@@ -1248,6 +1271,21 @@ input[type="number"]{
         //     height: 100%;
         //     background: url("../../images/icons/result_card_shape.svg");            
         // }
+        @media only screen and (max-width: 1200px) {        
+            padding: 30px 25px;
+            .card_img{
+                min-width: 100px;
+                padding-right: 20px;
+                margin-right: 20px;
+            }
+            .middle_content {
+                width: calc(100% - 330px);
+                padding-right: 20px;
+            }
+            .total_wrap{
+                padding-left: 15px;
+            }
+        }
     }
     .search_result_accordion_details{
         margin-top: 28px;
@@ -1355,7 +1393,7 @@ input[type="number"]{
             border-radius: 12px;
             border: 1px solid $neutral_2;
             background: $white;
-            margin-bottom: 20px;
+            margin-bottom: 20px;            
             .accordion-header{
                 .accordion-button {
                     background: transparent;
@@ -1405,10 +1443,16 @@ input[type="number"]{
     .charges_wrap {
         [class*="col-"]{
             padding: 0 7px;
+            @media only screen and (max-width: 1300px) {
+                padding: 0 4px;
+            }
         }
         .field_wrap {
             label {
                 font-size: 13px;
+                @media only screen and (max-width: 1300px) {
+                    font-size: 11px;
+                }
             }
             input,#more_menu {
                 width: 100%;
@@ -1436,6 +1480,32 @@ input[type="number"]{
                 input{
                     height: auto;
                 }
+            }
+        }
+    }
+    @media only screen and (max-width: 1200px) {
+        .main_accordion > .accordion-item {
+            overflow-x: auto;
+            & > .accordion-collapse, & > .accordion-header{
+                min-width: 1025px
+            }
+            & > .accordion-collapse .accordion-body{
+                padding-top: 0;
+            }
+        }
+    }
+    @media only screen and (max-width: 767px) {
+        .modal-header{
+            position: relative;
+            flex-direction: column;
+            align-items: self-start;
+            gap: 10px 0;
+        }
+        .right_wrap{
+            position: static;
+            padding-right: 0;
+            button.close {
+                right: 20px;
             }
         }
     }
