--- a/src/assets/scss/customstyle/_common_style.scss
+++ b/src/assets/scss/customstyle/_common_style.scss
@@ -375,6 +375,71 @@ nav.breadcrumb_wrap {
         }
     }
 }
+.react_pagination_wrap{
+    display: flex;
+    justify-content: flex-end;
+    & > ul {
+        display: flex;
+        align-items: center;
+        li {
+            a {
+                @include font($font-weight-medium,14px,normal,$neutral_5);
+                border: 0;
+                width: 40px;
+                height: 40px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 8px;
+            }
+            &.selected{
+                a{
+                    background-color: $primary_7;
+                    color: $white !important;
+                }
+            }            
+            &.previous ,&.next{
+                a{
+                    border: 1px solid $neutral_3;
+                    background: $white;
+                    box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.05);
+                    font-size: 0;
+                    position: relative;
+                    &::before{
+                        content: "\f054";
+                        position: absolute;
+                        font-family: "Font Awesome 5 Free";
+                        font-weight: 900;
+                        font-size: 13px;
+                    }
+                }
+            }
+            &.previous{
+                margin-right: 24px;
+                a::before{
+                    content: "\f053";
+                }
+            }
+            &.next {
+                margin-left: 24px;
+            }
+        }
+    }
+    @media only screen and (max-width: 767px) {
+        & > ul li a{
+            width: 30px;
+            height: 30px;
+        }
+        .arrow_wrap{
+            &.previous {
+                margin-right: 14px;
+            }
+            &.next {
+                margin-left: 14px;
+            }
+        }
+    }
+}
 .border_btn{
     border-radius: 8px;
     border: 1px solid $neutral_3 !important;
