Changes in company settings

--- a/src/assets/scss/customstyle/_main_style.scss
+++ b/src/assets/scss/customstyle/_main_style.scss
@@ -2,6 +2,7 @@
 @import './header_style';
 @import './procurement';
 @import "./accordion";
+@import "./settings";
 
 // ---------------- Auth ------------------------------------------------------
 .login_auth_wrap { 
