feat: update quotation

--- a/src/assets/scss/customstyle/_procurement.scss
+++ b/src/assets/scss/customstyle/_procurement.scss
@@ -1642,6 +1642,11 @@ input[type="number"]{
                     gap: 10px 30px;
                 }
             }
+            .pickup_charge {
+                padding: 8px 15px;
+                border: 1px solid #E5E7EB;
+                border-radius: 10px;
+            }
         }
     }
     .charges_wrap {
