Instant rate module, removed log, changes..

--- a/src/assets/scss/customstyle/_main_style.scss
+++ b/src/assets/scss/customstyle/_main_style.scss
@@ -3,6 +3,7 @@
 @import './procurement';
 @import "./accordion";
 @import "./settings";
+@import "./instantRate";
 
 // ---------------- Auth ------------------------------------------------------
 .login_auth_wrap { 
