feat: update quotation filter

--- a/src/assets/scss/customstyle/_procurement.scss
+++ b/src/assets/scss/customstyle/_procurement.scss
@@ -561,6 +561,9 @@ input[type="number"]{
             }
         }
     }
+    .form-select__menu {
+        z-index: 99;
+    }
 }
 
 // ---------- create sales --------------------------------------
