Design in instant rate, functionality..

--- a/src/assets/scss/customstyle/_instantRate.scss
+++ b/src/assets/scss/customstyle/_instantRate.scss
@@ -1,450 +1,47 @@
-.create_sales_wrapper {
-    min-height: calc(100vh - (#{$header-height} + 40px));
-    border-radius: 12px;
-    border: 1px solid $neutral_2;
-    background: $white;
-    padding: 18px;
-    .create_quote_top_back{
-        .back_wrap{
-            button{
-                border-radius: 8px;
-                border: 1px solid $neutral_4;
-                background: $white;
-                box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.05);
-                color: $neutral_8;
-                width: 44px;
-                padding: 0;
-                height: 36px;
-            }
-            p{
-                @include font($font-weight-semibold,18px,23px,$neutral_8);
-            }
-        }
-        > button{
-            padding: 0;
-            height: 34px;
-            min-width: 92px;
+.instant_rate_wrapper.create_sales_wrapper{
+     .create_sales_search_forms{
+
+        .prof_wrap1{
             border-radius: 8px;
-        }
-    }
-    .create_sales_search_forms{
-        .prof_wrap{
-            border-radius: 12px;
-            border: 1px solid $neutral_2;
-            position: relative;
-            align-items: center;
-            padding: 16px;
-            cursor: pointer;
-            .icon {
-                border-radius: 999px;
-                background: $primary_1;
-                width: 38px;
-                height: 38px;
-                margin-right: 12px;
-                img{
-                    max-width: 100%;
+        border: 1px solid #E5E7EB;
+        position: relative;
+        align-items: center;
+        padding: 8px 16px;
+        cursor: pointer;
+         }
+
+        .quotation_select_port_wrap {
+            .quotation_from_wrap {
+                padding: 12px 20px;
+                .common_dropdwon_btn_wrap .location_img{
+                    width: 28px;
                 }
-                &.customer_name{
-                    img{
-                        width: 100%;
-                    }
-                }
-            }
-            .con{
-                width: calc(100% - 50px);
-                pointer-events: none;
-                .value{
-                    display: block;
-                    margin-top: 4px;
-                    @include font($font-weight-medium,14px,normal,$neutral_4);
-                    &.value_focus{
-                        color: $neutral_8;
-                    }
-                }
-            }
-            i.mdi-chevron-down {
-                font-size: 22px;
-                color: $neutral_5;
-                pointer-events: none;
-            }
-            .form-label{
-                @include font($font-weight-semibold,12px,normal,$neutral_8);
-                margin: 0;                                
-            }
-            .form-select__control{
-                border: 0;
-                padding: 16px 16px 16px 60px;
-                background: transparent;
-                min-height: 70px;
-                cursor: pointer;
-                *{
-                    margin: 0;
-                    padding: 0;
-                }
-                .form-select__value-container{
-                    @include font($font-weight-medium,14px,normal,$neutral_4);
-                    padding: 16px 0 0;
-                }
-            }
-            .form-select__indicator-separator{
-                display: none;
-            }
-            .form-select__indicator{
-                svg{
-                    path{
-                        fill: $neutral_4;
-                    }
-                }
-            }
-        }
-        .form-select__menu-list {
-            padding: 0;
-            .custom-option {
-                display: flex;
-                align-items: center;
-                padding: 10px 16px;
-                gap: 8px;
-                border-bottom: 1px solid $neutral_2;
-                div{
-                    @include font($font-weight-medium,16px,normal,$neutral_8);
-                    letter-spacing: 0.16px;
-                }
-            }
-        }
-        .calendar_field_wrap{
-            position: relative;
-            padding: 0;
-            min-height: 70px;
-            .form-label{
-                position: absolute;
-                left: 60px;
-                top: 16px;
-            }
-            .icon{
-                position: absolute;
-                top: 0;
-                left: 13px;
-                bottom: 0;
-                margin: auto;
-            }
-            .con{
-                pointer-events: all;
-                width: 100%;
-                .flatpickr-input{
-                    padding: 32px 16px 16px 60px;
-                    margin: 0;
-                    border: 0;
-                    @include font($font-weight-medium,14px,normal,$neutral_8);
-                    &::placeholder{
-                        color: $neutral_4;
-                    }
-                }
-            }
-        }
-        .number_field_wrap{
-            .con{
-                pointer-events: all;
-            }
-            .left_field{
-                width: 100%;
-                input::-webkit-outer-spin-button,
-                input::-webkit-inner-spin-button {
-                    -webkit-appearance: none;
-                    margin: 0;
-                }
-                input{
-                    border: 0;
-                    width: 100%;
-                    @include font($font-weight-medium,14px,normal,$neutral_8);
-                    @include appearance;                    
-                    &::placeholder{
-                        color: $neutral_4;
-                    }
-                }
-            }
-            .common_dropdwon_btn_wrap{
-                #more_menu{
-                    @include font($font-weight-normal,14px,normal,$neutral_5);                    
-                }
-                .common_dropdown_wrap{
-                    width: 100px;
-                    right: 0;
-                    left: auto;
-                    li{
-                        padding: 13px 16px;
-                        @include font($font-weight-medium,16px,normal,$neutral_8);
-                        letter-spacing: 0.16px;      
-                        border-bottom: 1px solid $neutral_2;          
-                        span{
-                            @include font($font-weight-normal,14px,normal,$neutral_5);   
-                            margin-right: 8px;                         
-                        } 
-                    }
-                }
-            }
-        }
-        .quotation_select_port_wrap{
-            position: relative;
-            .quotation_from_wrap,.quotation_to_wrap{
-                width: 50%;
-                border: 1px solid $neutral_2;
-                background: $white;
-                &.openmenu{
-                    box-shadow: 0px 0px 0px 4px #F1F1FE;
-                    border: 1px solid $primary_7;
-                }
-            }
-            .quotation_from_wrap{
-                padding: 16px 20px;
-                border-radius: 12px 0 0 12px;
-                border-right: 0 !important;
             }
             .quotation_to_wrap{
-                padding: 16px 20px 16px 40px;
-                border-radius:0 12px 12px 0;
-                &.openmenu{
-                    border-left-color: transparent;
+                padding: 12px 20px 12px 40px;
+                .common_dropdwon_btn_wrap .location_img{
+                    width: 28px;
                 }
             }
-            .location_wrap {
-                .icon{
-                    width: 52px;
-                    height: 52px;
-                    flex: 0 0 52px;
-                    border-radius: 100%;
-                    background: $primary_1;
-                }
-                .value{
-                    @include font($font-weight-semibold,20px,normal,$neutral_4);
-                    display: flex;
-                    align-items: center;
-                    &.value_focus{
-                        color: $neutral_8;
-                    }
-                    img{
-                        width: 20px;
-                        height: 20px;
-                        margin-right: 6px;
-                    }
-                }
-            }
-            .swap_btn_wrap {
-                position: absolute;
-                left: 0;
-                right: 0;
+            .location_wrap .icon {
                 width: 38px;
                 height: 38px;
-                border-radius: 50px;
-                border: 1px solid $neutral_2;
-                background: var(--neutral-white, #FFF);
-                margin: auto;
-                bottom: 0;
-                top: 0;
+                flex: 0 0 38px;
+                border-radius: 100%;
+                background: #F1F1FE;
             }
-            .location_dropdown_wrap{
-                position: absolute;
-                left: 0;
-                right: 0;
-                top: 100%;
-                z-index: 99;
-                margin-top: 8px;
-                border-radius: 12px;
-                background: $white;
-                box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.20);
-                padding: 16px 20px;
-                display: flex;
-                gap: 20px;
-                .field_input_wrap {
-                    width: 100%;
-                }
-                .dropdown {
-                    > a{
-                        border-radius: 8px;
-                        border: 1px solid #E5E7EB;
-                        background-color: $white;
-                        font-weight: 400;
-                        color: $neutral_8;
-                        height: 38px;
-                        display: flex;
-                        line-height: 38px;
-                        padding: 0 10px;
-                        align-items: center;
-                        span{
-                            display: flex;
-                            align-items: center;
-                            img{
-                                margin-right: 8px;
-                            }
-                        }
-                        i{
-                            margin-left: auto;
-                            display: block;
-                            line-height: 1;
-                            font-size: 20px;
-                            color: $neutral_8;
-                        }
-                    }
-                    .dropdown-menu{
-                        width: 100%;
-                        padding: 0;
-                        border-radius: 12px;
-                        background: $white;
-                        box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.2);
-                        button.dropdown-item {
-                            padding: 0;
-                            cursor: pointer;
-                            &:hover,&.active{
-                                background-color: $primary_1;
-                            }
-                        }
-                        .custom-option {
-                            display: flex;
-                            align-items: center;
-                            padding: 13px 16px;
-                            gap: 8px;
-                            border-bottom: 1px solid $neutral_2;            
-                            p{
-                                @include font($font-weight-medium,16px,normal,$neutral_8);
-                                letter-spacing: 0.16px;
-                            }
-                        }
-                    }
-                }
-                .form-select__menu-list{
-                    .form-select__option{
-                        padding: 13px 16px;
-                        border-bottom: 1px solid $neutral_2; 
-                        @include font($font-weight-medium,16px,normal,$neutral_8);
-                        letter-spacing: 0.16px;
-                        &:hover,&.form-select__option--is-selected{
-                            background-color: $primary_1;
-                        }
-                        &.form-select__option--is-focused{
-                            background-color: rgba($color: $primary_1, $alpha: 0.5);
-                        }
-                        &.form-select__option--is-disabled{
-                            &:hover{
-                                background-color: transparent;
-                            }
-                            opacity: 0.4;
-                        }
-                    }
-                }
-            }
-
-            // new -- 08-11-2023
-            .location_wrap {
-                .con {
-                    width: 100%;
-                    .form-select__control {
-                        border: 0;
-                        padding: 0;
-                        min-height: auto;
-                        box-shadow: none;
-                        cursor: pointer;
-                        .form-select__value-container{
-                            padding: 0;
-                            .form-select__placeholder,.form-select__single-value{
-                                @include font($font-weight-semibold,20px,normal,$neutral_4);
-                                margin: 0;
-                            }
-                            .form-select__single-value{
-                                color: $neutral_8;
-                            }
-                        }
-                        .form-select__indicators {
-                            display: none;
-                        }
-                    }
-                }
-            }
-
-            @media only screen and (max-width: 767px) {
-                flex-direction: column;
-                .quotation_from_wrap{
-                    border-radius: 12px 12px 0 0;
-                    border-right: 1px solid #E5E7EB !important;
-                }
-                .quotation_to_wrap{
-                    border-radius: 0 0 12px 12px;
-                }
-                .quotation_from_wrap,.quotation_to_wrap{
-                    width: 100%;
-                    padding: 16px 10px;
-                    &.openmenu{
-                        border: 1px solid #4848F7 !important;
-                    }
-                }
-                .location_wrap {
-                    align-items: center;
-                    .icon{
-                        width: 40px;
-                        height: 40px;
-                        flex: 0 0 40px;
-                        img{
-                            width: 28px;
-                        }
-                    }
-                    .form-label{
-                        font-size: 12px;
-                        margin: 0 0 5px;
-                    }
-                    .value {
-                        font-size: 14px;
-                        img{
-                            width: 15px;
-                            height: 15px;
-                        }
-                    }
-                    // new 08-11-2023
-                    .con{                        
-                        .form-select__control {
-                            .form-select__value-container{
-                                padding: 0;
-                                .form-select__placeholder,.form-select__single-value{
-                                    font-size: 14px;
-                                }
-                            }
-                        }
-                    }
-                }
-                .location_dropdown_wrap{
-                    flex-direction: column;
-                    // position: static;
+        } 
+        .location_wrap {
+            .con {
+                .form-label{
+                    margin: 0px;
                 }
             }
         }
-        .search_view_btn{
-            @include font(500,14px,normal,$primary_7);
-        }
-    }
-    @media only screen and (max-width: 767px) {
-        .create_quote_top_back{
-            flex-direction: column;
-            align-items: flex-start !important;
-            gap: 10px;
-            .back_wrap {
-                p{
-                    font-size: 14px;
-                    line-height: 16px;
-                }
-            }
-            > button{
-                margin: 0 !important;
-            }
-        }
-        .create_sales_search_forms .quotation_select_port_wrap{
-            .location_dropdown_wrap {
-                .dropdown {
-                    .dropdown-menu .custom-option{
-                        flex-wrap: wrap;
-                        padding: 10px;
-                        p{
-                            font-size: 13px;
-                        }
-                    }
-                }
-            }
-        }
-    }   
+       
+     }
 }
+
+
+
+
